[gd_scene load_steps=4 format=3 uid="uid://cm5p7kyagqddi"]

[ext_resource type="Texture2D" uid="uid://cnwreymf40n4s" path="res://sprits/Paddle_C_Red_64x28_.png" id="1_okr7e"]
[ext_resource type="Script" path="res://Scripts/Character.gd" id="1_uwlt3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cio4b"]
radius = 13.7
height = 43.1

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_uwlt3")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.57079
scale = Vector2(0.672873, 1)
texture = ExtResource("1_okr7e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.0261799
shape = SubResource("CapsuleShape2D_cio4b")

[node name="SpawnBall" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="BulletspawnTime" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="BulletspawnTime" to="." method="_on_bulletspawn_time_timeout"]
